--- a/src/main/extansions/safari/shorter.safariextension/shorter.html
+++ b/src/main/extansions/safari/shorter.safariextension/shorter.html
@@ -5,21 +5,15 @@
 
     <script src="http://l.co.ua/in/js/qrcode.js"></script>
     <script type="text/javascript" charset="utf-8">
-        var cache = {};
 
         function performCommand(event)
         {
             var fullUrl = safari.application.activeBrowserWindow.activeTab.url;
-            var url = "";
-            if (cache[fullUrl]) {
-                url = cache[fullUrl];
-            } else {
-                var xmlhttp = new XMLHttpRequest();
-                xmlhttp.open("POST","http://l.co.ua/rest/postUrl",false);
-                xmlhttp.send(fullUrl);
-                url = "http://l.co.ua/" + xmlhttp.responseText;
-                cache[fullUrl] = url;
-            }
+            var xmlhttp = new XMLHttpRequest();
+            xmlhttp.open("POST","http://l.co.ua/rest/postUrl",false);
+            xmlhttp.send(fullUrl);
+            var url = "http://l.co.ua/" + xmlhttp.responseText;
+
             if (event.command === "copy") {
                 safari.extension.toolbarItems[0].showPopover();
                 document.getElementById('url').value = url;
