--- a/src/main/webapp/rus/rest.html
+++ b/src/main/webapp/rus/rest.html
@@ -2,13 +2,13 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Скорочувальник</title>
+    <title>Ужиматель</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="css/bootstrap-responsive.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="../css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="../css/main.css" rel="stylesheet">
 </head>
 <body>
 
@@ -61,11 +61,11 @@
 
             <div class="nav-collapse collapse">
                 <ul class="nav">
-                    <li><a href="index.html">Домівка</a></li>
+                    <li><a href="index.html">Дом</a></li>
                     <li><a href="stat.html">Статистика</a></li>
                     <li class="active"><a href="rest.html">REST</a></li>
                  
-                    <li><a href="plugins.html">Плагіни</a></li>
+                    <li><a href="plugins.html">Плагины</a></li>
                        <li><a href="about.html">Про l.co.ua</a></li>
 
                 </ul>
@@ -74,9 +74,9 @@
               <div class="nav-collapse collapse">
             <ul class="nav">
               
-              <li><a href="rus/rest.html"><img src="img/ru.png"/> </a></li>
-              <li><a href="rest.html"><img src="img/ua.png"/> </a></li>
-              <li><a href="eng/rest.html"><img src="img/us.png"/> </a></li>
+              <li><a href="rest.html"><img src="../img/ru.png"/> </a></li>
+              <li><a href="../rest.html"><img src="../img/ua.png"/> </a></li>
+              <li><a href="../eng/rest.html"><img src="../img/us.png"/> </a></li>
             </ul>
 
           </div>
@@ -141,8 +141,8 @@
     </div>
 </div>
 <script src="http://code.jquery.com/jquery.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/qrcode.js"></script>
+<script src="../js/bootstrap.min.js"></script>
+<script src="../js/qrcode.js"></script>
 <div id="footer">
     <div class="container">
         <div id="left">
