--- a/src/main/webapp/stat.html
+++ b/src/main/webapp/stat.html
@@ -44,13 +44,30 @@ function addRowToTable(table, statElement) {
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+
+          <a  z-index="1" href="https://github.com/b0noi/linkshorter"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
+
           <a class="brand" href="http://l.co.ua"><i>L.co.ua</i></a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li><a href="index.html">Домівка</a></li>
               <li class="active"><a href="stat.html">Статистика</a></li>
               <li><a href="rest.html">REST</a></li>
+               <li><a href="plugins.html"> Плагіни </a></li>
+              <li><a href="about.html">Про l.co.ua</a></li>
+                   
             </ul>
+            <form class="navbar-form pull-right">
+              <div class="nav-collapse collapse">
+            <ul class="nav">
+              
+              <li><a href="rus/stat.html"><img src="img/ru.png"/> </a></li>
+              <li><a href="stat.html"><img src="img/ua.png"/> </a></li>
+              <li><a href="eng/stat.html"><img src="img/us.png"/> </a></li>
+            </ul>
+
+          </div>
+            </form>
           </div>
         </div>
       </div>
