--- a/src/main/webapp/rest.html
+++ b/src/main/webapp/rest.html
@@ -103,7 +103,7 @@
                 <li>
                     <dl>
                         <dt><strike>http://l.co.ua/generateShort</strike></dt>
-                        <dd>post long url and get short id (<b>DEPRICATED</b>)</dd>
+                        <dd>post long url and get short id (<b>DEPRECATED</b>)</dd>
                     </dl>
                 </li>
             </ul>
