--- a/src/main/webapp/stat.html
+++ b/src/main/webapp/stat.html
@@ -35,6 +35,19 @@ function addRowToTable(table, statElement) {
     tr.append($("<td></td>").text(statElement["OS"]));
 }
 </script>
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-40154085-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 
 <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
