--- a/src/main/webapp/rus/about.html
+++ b/src/main/webapp/rus/about.html
@@ -12,6 +12,20 @@
 </head>
 <body>
 
+<script type="text/javascript">
+ 
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-40154085-1']);
+  _gaq.push(['_trackPageview']);
+ 
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+ 
+</script>
+
 <script language="JavaScript">
     var create_qrcode = function (text, typeNumber, errorCorrectLevel, table) {
 
