--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -167,10 +167,10 @@
                     Кожній URL-адресі присвоюється ключ, який додається після http://l.co.ua/. Наприклад,
                     http://l.co.ua/m3q2xt має ключ m3q2xt.</p>
                 <ol>
-                    <li>Viacheslav V. Kovalevskyi - головний розробник (<a href="http://twitter.com/b0noi">@b0noi</a>)
-                    </li>
+                    <li>Viacheslav V. Kovalevskyi - головний розробник (<a href="http://twitter.com/b0noi">@b0noi</a>)</li>
                     <li>Serhii Kotyk - розробник розширень для браузерів, web розробник</li>
                     <li>Oleg Kozlovskyi - Java EE розробник</li>
+                    <li>Vlad Sonkin - Java SE/EE developer (vlad.sonkin@gmail.com)</li>
                 </ol>
             </div>
 
@@ -180,9 +180,10 @@
                                 Each URL-address assigned to the key that is added after http://l.co.ua/. For example,
                     http://l.co.ua/m3q2xt a key m3q2xt.</p>
                 <ol>
-                    <li>Viacheslav V. Kovalevskyi - main developer (<a href="http://twitter.com/b0noi">@b0noi</a>)</li>
+                    <li>Viacheslav V. Kovalevskyi - Team lead (<a href="http://twitter.com/b0noi">@b0noi</a>)</li>
                     <li>Serhii Kotyk - plugins developer, web developer</li>
                     <li>Oleg Kozlovskyi - Java EE developer</li>
+                    <li>Vlad Sonkin - Java SE/EE developer (vlad.sonkin@gmail.com)</li>
                 </ol>
             </div>
 
@@ -192,10 +193,10 @@
                     Каждому URL-адресу присваивается ключ, котрый прибавляется после http://l.co.ua/. Например,
                     http://l.co.ua/m3q2xt имеет ключ m3q2xt.</p>
                 <ol>
-                    <li>Viacheslav V. Kovalevskyi - главный разработчик (<a href="http://twitter.com/b0noi">@b0noi</a>)
-                    </li>
+                    <li>Viacheslav V. Kovalevskyi - главный разработчик (<a href="http://twitter.com/b0noi">@b0noi</a>)</li>
                     <li>Serhii Kotyk - разработчик расширений для браузеров, web разработчик</li>
                     <li>Oleg Kozlovskyi - Java EE разработчик</li>
+                    <li>Vlad Sonkin - Java SE/EE developer (vlad.sonkin@gmail.com)</li>
                 </ol>
             </div>
 
