Changed "about" page

--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -171,6 +171,7 @@
                     <li>Serhii Kotyk - розробник розширень для браузерів, web розробник</li>
                     <li>Oleg Kozlovskyi - Java EE розробник</li>
                     <li>Vlad Sonkin - Java SE/EE developer (vlad.sonkin@gmail.com)</li>
+                    <li>Stanislav Savosyuk - Java SE/EE developer <a href="http://twitter.com/odis_st">@odis_st</a></li>
                 </ol>
             </div>
 
@@ -184,6 +185,7 @@
                     <li>Serhii Kotyk - plugins developer, web developer</li>
                     <li>Oleg Kozlovskyi - Java EE developer</li>
                     <li>Vlad Sonkin - Java SE/EE developer (vlad.sonkin@gmail.com)</li>
+                    <li>Stanislav Savosyuk - Java SE/EE developer <a href="http://twitter.com/odis_st">@odis_st</a></li>
                 </ol>
             </div>
 
@@ -197,6 +199,7 @@
                     <li>Serhii Kotyk - разработчик расширений для браузеров, web разработчик</li>
                     <li>Oleg Kozlovskyi - Java EE разработчик</li>
                     <li>Vlad Sonkin - Java SE/EE developer (vlad.sonkin@gmail.com)</li>
+                    <li>Stanislav Savosyuk - Java SE/EE developer <a href="http://twitter.com/odis_st">@odis_st</a></li>
                 </ol>
             </div>
 
