--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -84,32 +84,32 @@
             <div class="nav-collapse collapse">
                 <div class="ukr">
                     <ul class="nav">
-                        <li class="active"><a href="index.html">Домівка</a></li>
+                        <li><a href="index.html">Домівка</a></li>
                         <li><a href="stat.html">Статистика</a></li>
                         <li><a href="rest.html">REST</a></li>
 
                         <li><a href="plugins.html">Плагіни</a></li>
-                        <li><a href="about.html">Про l.co.ua</a></li>
+                        <li class="active"><a href="about.html">Про l.co.ua</a></li>
                     </ul>
                 </div>
                 <div class="eng">
                     <ul class="nav">
-                        <li class="active"><a href="index.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="stat.html">Statistic</a></li>
                         <li><a href="rest.html">REST</a></li>
 
                         <li><a href="plugins.html">Plugins</a></li>
-                        <li><a href="about.html">About l.co.ua</a></li>
+                        <li class="active"><a href="about.html">About l.co.ua</a></li>
                     </ul>
                 </div>
                 <div class="rus">
                     <ul class="nav">
-                        <li class="active"><a href="index.html">Дом</a></li>
+                        <li><a href="index.html">Дом</a></li>
                         <li><a href="stat.html">Статистика</a></li>
                         <li><a href="rest.html">REST</a></li>
 
                         <li><a href="plugins.html">Плагины</a></li>
-                        <li><a href="about.html">Про l.co.ua</a></li>
+                        <li class="active"><a href="about.html">Про l.co.ua</a></li>
                     </ul>
                 </div>
 
@@ -165,7 +165,7 @@
             <div class="rus">
                 <p class="alert alert-success" align="center">Сокращение URL — возможность, что используется в Интернете
                     для того, чтобы иметь альтернативный краткий URL-адрес для доступа к веб-странице.
-                    Каждому URL-адресу присваивается ключ, котрый прибавляется после http://l.co.ua/. Например,
+                    Каждому URL-адресу присваивается ключ, который прибавляется после http://l.co.ua/. Например,
                     http://l.co.ua/m3q2xt имеет ключ m3q2xt.</p>
                 <ol>
                     <li>Viacheslav V. Kovalevskyi - Team lead (<a href="http://twitter.com/b0noi">@b0noi</a>)</li>
