--- a/src/main/webapp/rest.html
+++ b/src/main/webapp/rest.html
@@ -83,9 +83,9 @@
             <div class="nav-collapse collapse">
                 <div class="ukr">
                     <ul class="nav">
-                        <li class="active"><a href="index.html">Домівка</a></li>
+                        <li><a href="index.html">Домівка</a></li>
                         <li><a href="stat.html">Статистика</a></li>
-                        <li><a href="rest.html">REST</a></li>
+                        <li class="active"><a href="rest.html">REST</a></li>
 
                         <li><a href="plugins.html">Плагіни</a></li>
                         <li><a href="about.html">Про l.co.ua</a></li>
@@ -93,9 +93,9 @@
                 </div>
                 <div class="eng">
                     <ul class="nav">
-                        <li class="active"><a href="index.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="stat.html">Statistic</a></li>
-                        <li><a href="rest.html">REST</a></li>
+                        <li class="active"><a href="rest.html">REST</a></li>
 
                         <li><a href="plugins.html">Plugins</a></li>
                         <li><a href="about.html">About l.co.ua</a></li>
@@ -103,9 +103,9 @@
                 </div>
                 <div class="rus">
                     <ul class="nav">
-                        <li class="active"><a href="index.html">Дом</a></li>
+                        <li><a href="index.html">Дом</a></li>
                         <li><a href="stat.html">Статистика</a></li>
-                        <li><a href="rest.html">REST</a></li>
+                        <li class="active"><a href="rest.html">REST</a></li>
 
                         <li><a href="plugins.html">Плагины</a></li>
                         <li><a href="about.html">Про l.co.ua</a></li>
