--- a/src/main/webapp/stat.html
+++ b/src/main/webapp/stat.html
@@ -74,8 +74,8 @@
             <div class="nav-collapse collapse">
                 <div class="ukr">
                     <ul class="nav">
-                        <li class="active"><a href="index.html">Домівка</a></li>
-                        <li><a href="stat.html">Статистика</a></li>
+                        <li><a href="index.html">Домівка</a></li>
+                        <li class="active"><a href="stat.html">Статистика</a></li>
                         <li><a href="rest.html">REST</a></li>
 
                         <li><a href="plugins.html">Плагіни</a></li>
@@ -84,8 +84,8 @@
                 </div>
                 <div class="eng">
                     <ul class="nav">
-                        <li class="active"><a href="index.html">Home</a></li>
-                        <li><a href="stat.html">Statistic</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li class="active"><a href="stat.html">Statistic</a></li>
                         <li><a href="rest.html">REST</a></li>
 
                         <li><a href="plugins.html">Plugins</a></li>
@@ -94,8 +94,8 @@
                 </div>
                 <div class="rus">
                     <ul class="nav">
-                        <li class="active"><a href="index.html">Дом</a></li>
-                        <li><a href="stat.html">Статистика</a></li>
+                        <li><a href="index.html">Дом</a></li>
+                        <li class="active"><a href="stat.html">Статистика</a></li>
                         <li><a href="rest.html">REST</a></li>
 
                         <li><a href="plugins.html">Плагины</a></li>
