--- a/src/main/webapp/plugins.html
+++ b/src/main/webapp/plugins.html
@@ -85,31 +85,31 @@
             <div class="nav-collapse collapse">
                 <div class="ukr">
                     <ul class="nav">
-                        <li class="active"><a href="index.html">Домівка</a></li>
+                        <li><a href="index.html">Домівка</a></li>
                         <li><a href="stat.html">Статистика</a></li>
                         <li><a href="rest.html">REST</a></li>
 
-                        <li><a href="plugins.html">Плагіни</a></li>
+                        <li class="active"><a href="plugins.html">Плагіни</a></li>
                         <li><a href="about.html">Про l.co.ua</a></li>
                     </ul>
                 </div>
                 <div class="eng">
                     <ul class="nav">
-                        <li class="active"><a href="index.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="stat.html">Statistic</a></li>
                         <li><a href="rest.html">REST</a></li>
 
-                        <li><a href="plugins.html">Plugins</a></li>
+                        <li class="active"><a href="plugins.html">Plugins</a></li>
                         <li><a href="about.html">About l.co.ua</a></li>
                     </ul>
                 </div>
                 <div class="rus">
                     <ul class="nav">
-                        <li class="active"><a href="index.html">Дом</a></li>
+                        <li><a href="index.html">Дом</a></li>
                         <li><a href="stat.html">Статистика</a></li>
                         <li><a href="rest.html">REST</a></li>
 
-                        <li><a href="plugins.html">Плагины</a></li>
+                        <li class="active"><a href="plugins.html">Плагины</a></li>
                         <li><a href="about.html">Про l.co.ua</a></li>
                     </ul>
                 </div>
