Password field added to URLData. Get passwored url method added. password.html added

--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -142,7 +142,7 @@
                 <ol>
                     <li>Viacheslav V. Kovalevskyi - Team lead (<a href="http://twitter.com/b0noi">@b0noi</a>)</li>
                     <li>Serhii Kotyk - розробник розширень для браузерів, web розробник</li>
-                    <li>Oleg Kozlovskyi - Java EE розробник</li>
+                    <li>Oleg Kozlovskyi - Java EE developer (<a href="http://twitter.com/xeenhl">@xeenhl</a>)</li>
                     <li>Vlad Sonkin - Java SE/EE developer (vlad.sonkin@gmail.com)</li>
                     <li>Stanislav Savosyuk - Java SE/EE developer <a href="http://twitter.com/odis_st">@odis_st</a></li>
                 </ol>
