Added packed Chrome extension. Add myself to the About page.

--- a/linkshorter-ui/src/main/webapp/about.html
+++ b/linkshorter-ui/src/main/webapp/about.html
@@ -141,6 +141,13 @@
                     веб-сторінки.
                     Кожній URL-адресі присвоюється ключ, який додається після http://l.co.ua/. Наприклад,
                     http://l.co.ua/m3q2xt має ключ m3q2xt.</p>
+
+                <span class="version-label">linkshorter v3.0</span>
+                <ol>
+                    <li>Ivan Mushketyk - Java SE/EE розробник, web розробник (<a href="https://twitter.com/IvanMushketyk">@IvanMushketyk</a>) </li>
+                </ol>
+
+                <span class="version-label">linkshorter v2.0</span>
                 <ol>
                     <li>Viacheslav V. Kovalevskyi - Team lead (<a href="http://twitter.com/b0noi">@b0noi</a>)</li>
                     <li>Serhii Kotyk - розробник розширень для браузерів, web розробник</li>
@@ -155,6 +162,13 @@
                     accessing the web page.
                                 Each URL-address assigned to the key that is added after http://l.co.ua/. For example,
                     http://l.co.ua/m3q2xt a key m3q2xt.</p>
+
+                <span class="version-label">linkshorter v3.0</span>
+                <ol>
+                    <li>Ivan Mushketyk - Java SE/EE developer, web developer (<a href="https://twitter.com/IvanMushketyk">@IvanMushketyk</a>) </li>
+                </ol>
+
+                <span class="version-label">linkshorter v2.0</span>
                 <ol>
                     <li>Viacheslav V. Kovalevskyi - Team lead (<a href="http://twitter.com/b0noi">@b0noi</a>)</li>
                     <li>Serhii Kotyk - plugins developer, web developer</li>
@@ -169,6 +183,13 @@
                     для того, чтобы иметь альтернативный краткий URL-адрес для доступа к веб-странице.
                     Каждому URL-адресу присваивается ключ, который прибавляется после http://l.co.ua/. Например,
                     http://l.co.ua/m3q2xt имеет ключ m3q2xt.</p>
+
+                <span class="version-label">linkshorter v3.0</span>
+                <ol>
+                    <li>Ivan Mushketyk - Java SE/EE разработчик, web разработчик (<a href="https://twitter.com/IvanMushketyk">@IvanMushketyk</a>) </li>
+                </ol>
+
+                <span class="version-label">linkshorter v2.0</span>
                 <ol>
                     <li>Viacheslav V. Kovalevskyi - Team lead (<a href="http://twitter.com/b0noi">@b0noi</a>)</li>
                     <li>Serhii Kotyk - разработчик расширений для браузеров, web разработчик</li>
