--- a/linkshorter-ui/src/main/webapp/plugins.html
+++ b/linkshorter-ui/src/main/webapp/plugins.html
@@ -147,7 +147,7 @@
                             <td><a href="http://l.co.ua/in/extension/safari/shorter.safariextz">Safari</a></td>
                         </tr>
                         <tr>
-                            <td>Chrome (ще недоступний)</td>
+                            <td><a href="extension/chrome/extension.crx">Chrome</a></td>
                         </tr>
                         <tr>
                             <td>Opera (ще недоступний)</td>
@@ -172,7 +172,7 @@
                             <td><a href="http://l.co.ua/in/extension/safari/shorter.safariextz">Safari</a></td>
                         </tr>
                         <tr>
-                            <td>Chrome (недоступный)</td>
+                            <td><a href="extension/chrome/extension.crx">Chrome</a></td>
                         </tr>
                         <tr>
                             <td>Opera (недоступный)</td>
@@ -197,7 +197,7 @@
                             <td><a href="http://l.co.ua/in/extension/safari/shorter.safariextz">Safari</a></td>
                         </tr>
                         <tr>
-                            <td>Chrome (not yet avalible)</td>
+                            <td><a href="extension/chrome/extension.crx">Chrome</a></td>
                         </tr>
                         <tr>
                             <td>Opera (not yet avalible)</td>
