Fix of bug with iframe in panel

--- a/src/main/extensions/firefox/shorter.firefoxextension/chrome/content/iframe.html
+++ b/src/main/extensions/firefox/shorter.firefoxextension/chrome/content/iframe.html
@@ -1,7 +1,14 @@
 <html>
     <head>
+        <style>
+            input {
+                font-size: 10px;
+                padding: 0;
+                margin: 0;
+            }
+        </style>
     </head>
     <body>
-        <input type="text" size=15 id="lcoua-test">
+        <input type="text" size=15 id="lcoua-url">
     </body>
 </html>
