First working version of lcoua extension

--- a/src/main/extensions/firefox/shorter.firefoxextension/chrome/content/iframe.html
+++ b/src/main/extensions/firefox/shorter.firefoxextension/chrome/content/iframe.html
@@ -1,14 +1,12 @@
 <html>
     <head>
-        <style>
-            input {
-                font-size: 10px;
-                padding: 0;
-                margin: 0;
-            }
-        </style>
+        <link rel="stylesheet" type="text/css" href="chrome://lcoua/skin/skin.css">
     </head>
-    <body>
-        <input type="text" size=15 id="lcoua-url">
+    <body id="iframe-body">
+        <div id="lcoua-input">
+            <input class="textbox" type="text" id="lcoua-url">
+        </div>
+        <div id="lcoua-qr" align="center">
+        </div>
     </body>
 </html>
